@@ -1,0 +1,7 @@
+{
+  "credit": "Made with Blockbench",
+  "parent": "neostorage:block/toolstorage1",
+  "textures": {
+    "front": "neostorage:block/toolstorage_front4"
+  }
+}
