@@ -3,6 +3,7 @@
   "values": [
     "neostorage:toolstorage1",
     "neostorage:toolstorage2",
-    "neostorage:toolstorage3"
+    "neostorage:toolstorage3",
+    "neostorage:toolstorage4"
   ]
 }
